--- a/selamat datang.html
+++ b/selamat datang.html
@@ -8,7 +8,8 @@ selamat datang di amanah online
   <h2 id="welcome">Selamat datang!</h2>
   <h id="product">belanja di amanah online aja</h2>
   <button onclick="logout()">Logout</button>
-
+  if addEventListener
+  
   <script src="script.js"></script>
   <script>
     checkSession();
