--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wawan Sismadi</title>
+  <title>afwanda rizqi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,17 +15,17 @@
   </div>
 
   <div class="header-text">
-    <h1>Wawan Sismadi</h1>
+    <h1>afwanda rizqi</h1>
     <p class="subtitle">He/Him • Web Developer</p>
-    <p>Jakarta, Indonesia • <a href="https://wawan.sismadi.com">wawan.sismadi.com</a></p>
-    <p><strong>Sismadi Langit Solusi</strong> — Universitas Ahmad Dahlan</p>
+    <p>Jakarta, Indonesia • <a href="https://wawan.sismadi.com">afwanda.web.com</a></p>
+    <p><strong>afwanda website</strong> — Universitas ipwija</p>
   </div>
 
   <div class="action-buttons">
     <button>Open to work</button>
     <button>Add profile section</button>
     <button>Enhance profile</button>
-<a href='https://sismadi.github.io/pw/web/admin.html'> Admin </a>
+<a href='https://afwanda.github.io/pw/web/admin.html'> Admin </a>
   </div>
 
   <div id="content"  >
