--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="header-text">
     <h1>afwanda rizqi</h1>
     <p class="subtitle">He/Him • Web Developer</p>
-    <p>Jakarta, Indonesia • <a href="https://wawan.sismadi.com">afwanda.web.com</a></p>
+    <p>Jakarta, Indonesia • <a href="https://afwanda.rizqi.com">afwanda.web.com</a></p>
     <p><strong>afwanda website</strong> — Universitas ipwija</p>
   </div>
 
@@ -50,7 +50,7 @@
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
 
-const SUPABASE_URL = 'https://xdrrmdtckdjcniemwngd.supabase.co'
+const SUPABASE_URL = 'https://https://xdrrmdtckdjcniemwngd.supabase.co.
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpsaWdrYmtyeHFxYmV0bnd5a3JxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkyNjM2ODUsImV4cCI6MjA2NDgzOTY4NX0.kDK8_c6qCKKRax4HbHwEbAMwTavhDRWdgqkDtjWWYD8'
 
 
