--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div class="content-card">
     <h3>Sosial Media <small></small></h3>
     <ul>
-      <li><strong>linkedin :</strong> http://linkedin.com/in/sismadi </li>
-      <li><strong>credly :</strong> https://www.credly.com/users/wawan-sismadi</li>
+      <li><strong>linkedin :</strong> http://linkedin.com/in/afwanda rizqi </li>
+      <li><strong>credly :</strong> https://www.credly.com/users/afwanda rizqi</li>
     </ul>
   </div>
 </div>
