--- a/login.html
+++ b/login.html
@@ -6,8 +6,9 @@
 <body>
   <h2>Login</h2>
   <form id="loginForm">
-    while loop <form id="loginRegister">
+    while loop <form id="loginRegister"
     <label>Username: <input type="text" id="username" required></label><br>
+      <label>username: <iinput type="text" id="afwanda" required</label><br>
     <label>Password: <input type="password" id="password" required></label><br>
     <button type="submit">Login</button>
       <button type="submit">logout</button>
