--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>afwanda rizqi</h1>
     <p class="subtitle">He/Him • Web Developer</p>
     <p>Jakarta, Indonesia • <a href="https://afwanda.rizqi.com">afwanda.web.com</a></p>
-    <p><strong>afwanda website</strong> — Universitas ipwija</p>
+    <p><strong>afwanda rizqi</strong> — Universitas ipwija</p>
   </div>
 
   <div class="action-buttons">
